# mototp

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: bump-and-release.yml  checks.yml
src/: entry.rs  main.rs  otp.rs  otpauth.rs
