[package]
name = "mototp"
version = "0.0.1"
edition = "2024"
description = "Local-only cross-platform TOTP authenticator with LAN sync and no cloud"
repository = "https://github.com/nullmonger/mototp"
license = "MIT OR Apache-2.0"

[dependencies]
data-encoding = "2"
hmac = "0.13"
percent-encoding = "2"
sha1 = "0.10"
sha2 = "0.10"
thiserror = "2.0.18"
